--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.87.1",
+    "@types/node": "^24.3.1",
     "antd": "^5.27.3",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.12",
+    "i": "^0.3.7",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.8.2",
